--- a/Project1/EmbeddingLayers.ipynb
+++ b/Project1/EmbeddingLayers.ipynb
@@ -9,17 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "['the', 'quick', 'brown', 'fox', 'jumped', 'over', 'the', 'lazy', 'dog']\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sentence = \"the quick brown fox jumped over the lazy dog\"\n",
     "words = sentence.split(' ')  # 分词\n",
@@ -35,17 +29,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "{'b', 'o', 'u', 'n', 'r'} {'e', 'g', 'l', 'o'}\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = set('runoob') \n",
     "y = set('google')\n",
@@ -61,17 +49,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "['lazy', 'the', 'quick', 'jumped', 'brown', 'fox', 'over', 'dog']\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "vocabl = list(set(words))  # 去除了重复的 ‘the’\n",
     "print(vocabl)"
@@ -79,17 +61,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "9\n8\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(len(words))\n",
     "print(len(vocabl))"
@@ -105,17 +81,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "{'lazy': 0, 'the': 1, 'quick': 2, 'jumped': 3, 'brown': 4, 'fox': 5, 'over': 6, 'dog': 7}\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# convert words to indexes\n",
     "word_to_ix1 = {word : i for i, word in enumerate(vocabl)}  # convert to dict\n",
@@ -124,17 +94,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "tensor([0, 1, 2, 3, 4, 5, 6, 7])\n['lazy', 'the', 'quick', 'jumped', 'brown', 'fox', 'over', 'dog']\ntensor([[1, 0, 0, 0, 0, 0, 0, 0],\n        [0, 1, 0, 0, 0, 0, 0, 0],\n        [0, 0, 1, 0, 0, 0, 0, 0],\n        [0, 0, 0, 1, 0, 0, 0, 0],\n        [0, 0, 0, 0, 1, 0, 0, 0],\n        [0, 0, 0, 0, 0, 1, 0, 0],\n        [0, 0, 0, 0, 0, 0, 1, 0],\n        [0, 0, 0, 0, 0, 0, 0, 1]])\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "from torch.nn.functional import one_hot\n",
@@ -155,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,17 +154,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "[(['tomorrow', 'and'], 'tomorrow'), (['and', 'tomorrow'], 'and'), (['tomorrow', 'and'], 'tomorrow,'), (['and', 'tomorrow,'], 'creeps'), (['tomorrow,', 'creeps'], 'in'), (['creeps', 'in'], 'this')]\n====================================================================================================\n['that', 'an', 'told', 'his', 'our', 'no', 'by', 'to', 'of', 'signifying', 'brief', 'syllable', 'time,', 'fools', 'creeps', 'idiot,', 'walking', 'then', 'fury,', 'tomorrow,', 'out,', 'struts', 'is', 'but', 'poor', 'candle!', 'in', 'tomorrow', 'upon', 'stage', 'the', 'a', 'hour', 'heard', 'tale', 'and', 'recorded', 'full', 'it', 'nothing.', 'shadow,', 'petty', 'yesterdays', 'pace', 'frets', 'way', 'day', 'more:', 'have', 'last', 'lighted', 'death.', 'sound', 'this', 'all', 'player', 'from', \"life's\", 'dusty']\n====================================================================================================\n75\n59\n====================================================================================================\n{'that': 0, 'an': 1, 'told': 2, 'his': 3, 'our': 4, 'no': 5, 'by': 6, 'to': 7, 'of': 8, 'signifying': 9, 'brief': 10, 'syllable': 11, 'time,': 12, 'fools': 13, 'creeps': 14, 'idiot,': 15, 'walking': 16, 'then': 17, 'fury,': 18, 'tomorrow,': 19, 'out,': 20, 'struts': 21, 'is': 22, 'but': 23, 'poor': 24, 'candle!': 25, 'in': 26, 'tomorrow': 27, 'upon': 28, 'stage': 29, 'the': 30, 'a': 31, 'hour': 32, 'heard': 33, 'tale': 34, 'and': 35, 'recorded': 36, 'full': 37, 'it': 38, 'nothing.': 39, 'shadow,': 40, 'petty': 41, 'yesterdays': 42, 'pace': 43, 'frets': 44, 'way': 45, 'day': 46, 'more:': 47, 'have': 48, 'last': 49, 'lighted': 50, 'death.': 51, 'sound': 52, 'this': 53, 'all': 54, 'player': 55, 'from': 56, \"life's\": 57, 'dusty': 58}\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Build a list of tuples. Each tuple is ([word_i-2, word_i-1], target word)\n",
     "trigrams = [([test_sentence[i], test_sentence[i + 1]], test_sentence[i + 2])\n",
@@ -220,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,17 +231,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": "100%|██████████| 73/73 [00:01<00:00, 55.12it/s, loss=4.36]\n100%|██████████| 73/73 [00:01<00:00, 43.03it/s, loss=4.32]\n100%|██████████| 73/73 [00:00<00:00, 73.05it/s, loss=4.28]\n100%|██████████| 73/73 [00:00<00:00, 107.01it/s, loss=4.24]\n100%|██████████| 73/73 [00:00<00:00, 144.08it/s, loss=4.21]\n100%|██████████| 73/73 [00:00<00:00, 170.22it/s, loss=4.17]\n100%|██████████| 73/73 [00:00<00:00, 140.76it/s, loss=4.13]\n100%|██████████| 73/73 [00:00<00:00, 142.40it/s, loss=4.1]\n100%|██████████| 73/73 [00:00<00:00, 161.22it/s, loss=4.06]\n100%|██████████| 73/73 [00:00<00:00, 132.12it/s, loss=4.03]\n100%|██████████| 73/73 [00:00<00:00, 123.63it/s, loss=3.99]\n100%|██████████| 73/73 [00:05<00:00, 13.89it/s, loss=3.95]\n100%|██████████| 73/73 [00:01<00:00, 52.43it/s, loss=3.92]\n100%|██████████| 73/73 [00:01<00:00, 65.12it/s, loss=3.88]\n100%|██████████| 73/73 [00:02<00:00, 33.55it/s, loss=3.85]\n100%|██████████| 73/73 [00:01<00:00, 71.55it/s, loss=3.81]\n100%|██████████| 73/73 [00:01<00:00, 58.79it/s, loss=3.78]\n100%|██████████| 73/73 [00:01<00:00, 46.27it/s, loss=3.75]\n100%|██████████| 73/73 [00:01<00:00, 47.81it/s, loss=3.71]\n100%|██████████| 73/73 [00:01<00:00, 52.66it/s, loss=3.68]\n100%|██████████| 73/73 [00:00<00:00, 138.89it/s, loss=3.64]\n100%|██████████| 73/73 [00:00<00:00, 112.26it/s, loss=3.61]\n100%|██████████| 73/73 [00:00<00:00, 126.64it/s, loss=3.57]\n100%|██████████| 73/73 [00:00<00:00, 122.00it/s, loss=3.54]\n100%|██████████| 73/73 [00:00<00:00, 138.63it/s, loss=3.51]\n100%|██████████| 73/73 [00:00<00:00, 130.24it/s, loss=3.47]\n100%|██████████| 73/73 [00:00<00:00, 149.38it/s, loss=3.44]\n100%|██████████| 73/73 [00:00<00:00, 138.10it/s, loss=3.4]\n100%|██████████| 73/73 [00:00<00:00, 138.89it/s, loss=3.37]\n100%|██████████| 73/73 [00:00<00:00, 130.47it/s, loss=3.34]\n100%|██████████| 73/73 [00:00<00:00, 141.58it/s, loss=3.3]\n100%|██████████| 73/73 [00:00<00:00, 132.12it/s, loss=3.27]\n100%|██████████| 73/73 [00:00<00:00, 124.27it/s, loss=3.24]\n100%|██████████| 73/73 [00:00<00:00, 154.10it/s, loss=3.2]\n100%|██████████| 73/73 [00:00<00:00, 138.63it/s, loss=3.17]\n100%|██████████| 73/73 [00:00<00:00, 154.74it/s, loss=3.14]\n100%|██████████| 73/73 [00:00<00:00, 117.11it/s, loss=3.1]\n100%|██████████| 73/73 [00:00<00:00, 114.55it/s, loss=3.07]\n100%|██████████| 73/73 [00:00<00:00, 171.02it/s, loss=3.04]\n100%|██████████| 73/73 [00:00<00:00, 176.79it/s, loss=3]\n100%|██████████| 73/73 [00:00<00:00, 171.82it/s, loss=2.97]\n100%|██████████| 73/73 [00:00<00:00, 131.17it/s, loss=2.94]\n100%|██████████| 73/73 [00:00<00:00, 128.41it/s, loss=2.9]\n100%|██████████| 73/73 [00:00<00:00, 160.53it/s, loss=2.87]\n100%|██████████| 73/73 [00:00<00:00, 130.94it/s, loss=2.84]\n100%|██████████| 73/73 [00:00<00:00, 149.38it/s, loss=2.81]\n100%|██████████| 73/73 [00:00<00:00, 144.09it/s, loss=2.77]\n100%|██████████| 73/73 [00:00<00:00, 159.13it/s, loss=2.74]\n100%|██████████| 73/73 [00:00<00:00, 137.06it/s, loss=2.71]\n100%|██████████| 73/73 [00:00<00:00, 176.37it/s, loss=2.68]\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from tqdm import tqdm  # 加上进度条\n",
     "\n",
@@ -318,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,17 +280,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "tomorrow,\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy\n",
     "\n",
@@ -362,11 +308,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
+   "version": "3.7.4-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1594125444456",
+   "name": "python_defaultSpec_1596075519576",
    "display_name": "Python 3.7.4 64-bit"
   }
  },
